MMA-6823 koble inn arkivdel på riktig sted